# BlockchainSimulations

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: check-env.yml
code/: go.mod  go.sum  main.go
code/goApp/: balance.go  config.go  main.go  rpc.go  transaction.go  types.go  utilis.go
code/internal/config/: config.go
code/internal/rpc/: rpc.go  types.go
code/internal/transaction/: balance.go  transaction.go
code/internal/utilis/: utilis.go
description/: README.md
goCode/: go.mod
goCode/goApp/: main.go
goCode/internal/config/: config.go
goCode/internal/rpc/: rpc.go  types.go
goCode/internal/transaction/: balance.go  transaction.go
rustCode/: Cargo.toml
rustCode/src/: lib.rs  main.rs
rustCode/src/config/: mod.rs
rustCode/src/models/: mod.rs
rustCode/src/rpc/: fetch.rs  mod.rs
rustCode/src/utils/: functions.rs  mod.rs  prints.rs
