[package]
name = "rustCode"
version = "0.1.0"
edition = "2024"

[dependencies]
reth-primitives = { path = "../../reth/crates/primitives" }
reth-evm = { path = "../../reth/crates/evm" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dotenvy = "0.15"
