[package]
name = "rustCode"
version = "0.1.0"
edition = "2021"

[lib]
name = "rpc"
crate-type = ["cdylib"]


[dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dotenvy = "0.15"
futures = "0.3.31"
